demo-foreman-PF6/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreman-demo
  labels:
    demo: foreman-demo
