demo-foreman-PF6/k8s/base/foreman-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foreman
  namespace: foreman-demo
  labels:
    app: foreman
    app.kubernetes.io/name: foreman
    app.kubernetes.io/part-of: foreman-demo
    role: infra
    demo: foreman-demo
spec:
  selector:
    kubevirt.io/domain: foreman
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: http-alt
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: registration
      port: 8080
      targetPort: 8080
      protocol: TCP
